--- a/base.css
+++ b/base.css
@@ -1,5 +1,10 @@
 @charset "utf-8";
+/*
+   Author: Jasmyne Monaco
+   Date: 05-14-2019
+   Filename: base.css
 
+*/
 .center {
   margin-left: auto;
   margin-right: auto;
