--- a/layout.css
+++ b/layout.css
@@ -1,5 +1,10 @@
 @charset "utf-8";
+/*
+   Author: Jasmyne Monaco
+   Date:  05-14-2019
+   Filename: layout.css
 
+*/
 /* Navigation Bar */
 .container {
   width: 80%;
